# zkvote

./: .deployed-contracts  .deployed-contracts-futurenet  .env.example  .gitignore  BN254_ENCODING_MIGRATION.md  BUDGET_BASELINES.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  P25_DEPLOYMENT.md  PHASE0_REPORT.md  README.md  README_WALLET_KIT_ANALYSIS.md  REFACTOR_PLAN.md  SECURITY_STATUS.md  SPEC_DRIFT.md  STELLAR_WALLETS_KIT_ANALYSIS.md  TESTS.md  TEST_PLAN.md  THREAT_MODEL.md  VK_ROTATION.md  WALLET_KIT_ARCHITECTURE.md  WALLET_KIT_QUICK_REF.md  deploy-local-future.sh  deploy-local-nightly.sh  package.json  proof_soroban.json  rust-toolchain.toml  spec.md
contracts/comments/: Cargo.toml
contracts/comments/src/: lib.rs
contracts/comments/test_snapshots/test/: test_add_anonymous_comment.1.json  test_add_public_comment.1.json  test_admin_can_delete_any_comment.1.json  test_anonymous_comment_rejects_root_at_modulus.1.json  test_content_cid_too_long_fails.1.json  test_contract_creation.1.json  test_delete_public_comment.1.json  test_edit_public_comment.1.json  test_fixed_mode_rejects_wrong_root.1.json  test_non_admin_cannot_admin_delete.1.json  test_reply_to_comment.1.json  test_trailing_mode_rejects_invalid_root.1.json  test_trailing_mode_rejects_root_predating_removal.1.json
contracts/membership-tree/: Cargo.toml
contracts/membership-tree/src/: lib.rs  poseidon_params.rs  test.rs
contracts/membership-tree/test_snapshots/test/: test_constructor.1.json  test_different_daos_have_separate_trees.1.json  (+15 more)
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/test_snapshots/: README.md  budget_set_vk_within_limit.1.json  budget_vote_path_within_limit.1.json  stress_many_members_and_proposals.1.json  stress_many_proposals_per_dao.1.json  stress_member_aliases.1.json  stress_merkle_tree_registrations.1.json  test_admin_can_propose_in_admin_only_mode.1.json  test_admin_can_reinstate_member.1.json  test_admin_can_remove_member.1.json  test_admin_can_revoke_member.1.json  test_cannot_remove_unregistered_member.1.json  test_corrupted_proof_fails.1.json  test_create_proposal_with_future_deadline.1.json  test_create_proposal_with_no_deadline.1.json  test_create_proposal_with_past_deadline_fails.1.json  test_duplicate_commitment_rejected.1.json  test_empty_tree_root.1.json  test_fixed_mode_late_joiner_cannot_vote.1.json  test_full_public_dao_flow.1.json  test_invalid_alpha_point.1.json  test_invalid_ic_point.1.json  test_member_cannot_propose_when_admin_only_mode.1.json  test_member_creates_proposal_in_public_dao.1.json  test_multiple_daos_separate_root_histories.1.json  test_multiple_removals.1.json  test_multiple_revoke_reinstate_cycles.1.json  test_non_admin_cannot_remove_member.1.json  test_non_member_cannot_create_proposal_in_private_dao.1.json  test_non_member_creates_proposal_in_public_dao.1.json  test_nullifier_reusable_across_daos.1.json  test_only_admin_can_reinstate_member.1.json  test_only_admin_can_remove_member.1.json  test_open_mode_late_joiner_can_vote.1.json  test_open_mode_removed_member_can_vote_on_old_proposal.1.json  test_open_mode_removed_member_cannot_vote_on_new_proposal.1.json  test_pairing_security_boundary.1.json  test_point_at_infinity.1.json  test_poseidon_hash_12345_67890.1.json  test_poseidon_kat_multiple_commitments.1.json  (+32 more)
tests/integration/tests/: boundary_conditions.rs  budget_smoke.rs  member_removal.rs  member_revocation.rs  pairing_security_boundary.rs  point_validation_real_network.rs  poseidon_direct.rs  poseidon_kat.rs  proof_edge_cases.rs  proposal_deadline.rs  public_dao.rs  removed_member_revote.rs  removed_member_revote.rs.old  removed_member_voting.rs  root_mismatch_test.rs  standalone_proof_verification.rs  stress.rs  vote_mode.rs
(+438 files in other folders)
