[workspace]
members = [
    "contracts/dao-registry",
    "contracts/membership-sbt",
    "contracts/membership-tree",
    "contracts/voting",
    "tests/integration",
]
resolver = "2"

[workspace.dependencies]
# P25 Preview SDK with BN254 + Poseidon support
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "eb829477e1bcd6305048d6715233598783d8b915" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
