[workspace]
members = [
    "contracts/dao-registry",
    "contracts/membership-sbt",
    "contracts/membership-tree",
    "contracts/voting",
    "tests/integration",
    "tests/p25-feature-check",
]
resolver = "2"

[workspace.dependencies]
# P25 Preview SDK with BN254 + Poseidon + BIG-ENDIAN encoding (PR #1614)
# This commit bumps env to cf58d535 which has the BE encoding fix
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "b122dc6cf1ac96c851efc252b370e5384cd973df" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
