[workspace]
members = [
    "contracts/zkvote-groth16",
    "contracts/dao-registry",
    "contracts/membership-sbt",
    "contracts/membership-tree",
    "contracts/voting",
    "contracts/comments",
    "tests/integration",
]
resolver = "2"

[workspace.dependencies]
# P25 Preview SDK with BN254 + Poseidon (release/v25-preview branch)
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk", rev = "d64ed4c27f9d3c919d4c5369de40a9ba88163f2c" }
num-bigint = "0.4"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
