[package]
name = "membership-tree"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["hazmat"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "hazmat"] }

[features]
testutils = ["soroban-sdk/testutils"]
